src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__tests__draw_blocks_whole_layout-2.snap
---
source: src/ui/draw_blocks/mod.rs
expression: buffer_to_fg(setup.terminal.backend().buffer())
---
....XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX----------------------------::::::::::::::::::
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc::::::::::::::::
c---BBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBB********************-----------------------------c:--YYYYY-------:
c---BBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBB********************-----------------------------c:--MMMMMMM-----:
c---BBBBBBBBBBBBBBGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGBBBBBBBBBBBBBBBBBBBBB********************-----------------------------c:--RRRR--------:
c----------------------------------------------------------------------------------------------------------------------------------------------c:--::::::------:
c----------------------------------------------------------------------------------------------------------------------------------------------c:--------------:
c----------------------------------------------------------------------------------------------------------------------------------------------c:--------------:
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc::::::::::::::::
::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
:--------------------------------------------------------------------------------------------------------------------------------------------------------------:
::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
..........................GGGGGGGGGGGG...................................................GGGGGGGGGGGGGGGGG...................................GGGGGGG............
.******.-----MMMM-----------------------------------------------..*********.-----CCC---------------------------------------------..YYYYYYYYYYYYYYYYYYYYYYYYYYYY.
.------.--MMM---M-----------------------------------------------..---------.--CCC--C---------------------------------------------...............................
.------.MM-------MMM--------------------------------------------..---------.CC------CCC------------------------------------------...............................
.------.--------------------------------------------------------..---------.-----------------------------------------------------...............................
................................................................................................................................................................
