src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__tests__draw_blocks_whole_layout_help_panel.snap
---
source: src/ui/draw_blocks/mod.rs
expression: setup.terminal.backend()
---
"    name          state       status      cpu      memory/limit          id         image     ↓ rx      ↑ tx                                  ( h ) exit help   "
"╭ Containers 1/3 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮╭──────────────╮"
"│⚪ container_1   ✓ running   Up 1 hour   03.00%   30.00 kB / 30.00 kB          1   image_1   0.00 kB   0.00 kB                                ││▶ pause       │" Hidden by multi-width symbols: [(2, " ")]
"│   container_2   ✓ running   Up 2 hour   00.00%    0.00 kB /  0.00 kB          2   image_2   0.00 kB   0.00 kB                                ││  restart     │"
"│   container_3   ✓ running   Up 3 hour   00.00%    0.00 kB /  0.00 kB          3   image_3   0.00 kB   0.00 kB                                ││  stop        │"
"│                                                                                                                                              ││  delete      │"
"│                                                                                                                                              ││              │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯╰──────────────╯"
"╭ Logs 3/3 - container_╭ 0.00.000 ──────────────────────────────────────────────────────────────────────────────────────────────────────╮──────────────────────╮"
"│  line 1              │                          88                                                                                    │                      │"
"│  line 2              │                          88                                                                                    │                      │"
"│▶ line 3              │  ,adPPYba,  8b,     ,d8  88   ,d8   ,adPPYba,  8b,dPPYb                                                        │                      │"
"│                      │ a8"     "8a  `Y8, ,8P'   88 ,a8"   a8P_____88  88P'   "                                                        │                      │"
"│                      │ 8b       d8    )888(     8888(     8PP"""""""  88                                                              │                      │"
"│                      │ "8a,   ,a8"  ,d8" "8b,   88`"Yba,  "8b,   ,aa  88                                                              │                      │"
"│                      │  `"YbbdP"'  8P'     `Y8  88   `Y8a  `"Ybbd8"'  88                                                              │                      │"
"│                      │                                                        a work in progress, all and any input appreciated       │                      │"
"│                      │    A simple tui to view & control docker containers             https://github.com/mrjackwills/oxker           │                      │"
"│                      │                                                                                                                │                      │"
"│                      │                                                     Keymap                                                     │                      │"
"│                      │ q                    quit                              c Esc      close dialog                                 │                      │"
"│                      │ Down Up j k Home End scroll vertically                 Left Right scroll horizontally                          │                      │"
"│                      │ Control              increase scroll speed             Enter      send docker command                          │                      │"
"│                      │ e                    exec into a container             Space a    mark one / all - commands apply to marked    │                      │"
"│                      │ / F1                 filter mode                       i          container inspect mode                       │                      │"
"│                      │ h                    toggle this panel                 #          log search mode                              │                      │"
"│                      │ - =                  change log section height         f          force clear screen and redraw                │                      │"
"│                      │ 1 ~ 9                sort by header - or click header  \          toggle of section visibility                 │                      │"
"│                      │ Tab Back Tab         change panel                      0          stop sort                                    │                      │"
"╰──────────────────────│ s                    save logs to file                 m          toggle mouse capture - allows text selection │──────────────────────╯"
"╭────────────── cpu 03.│                                                                                                                │──── ports ───────────╮"
"│10.00%│     •         ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ ip   private   public│"
"│      │    ••                            ││         │    ••                         ││         │    ••                         │ │               8001         │"
"│      │   • •                            ││         │   • •                         ││         │    ••                         │ │127.0.0.1      8003     8003│"
"│      │   • •                            ││         │   • •                         ││0.00 kb/s│    ••                         │ │                            │"
"│      │  •   •                           ││         │  •  •                         ││         │     •                         │ │                            │"
"│      │ •    ••                          ││         │ •   ••                        ││0.00 kb/s│     •                         │ │                            │"
"│      │••    •                           ││         │••   ••                        ││         │     •                         │ │                            │"
"│      │                                  ││         │                               ││         │     •                         │ │                            │"
"╰─────────────────────────────────────────╯╰─────────────────────────────────────────╯╰─────────────────────────────────────────╯ ╰────────────────────────────╯"
